--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -197,6 +197,8 @@ h2 {
     font-weight: 500;
     letter-spacing: -0.9px;
     padding: 10px 20px;
+    bottom: 20px;
+    left: 10px;
 
 }
 .showmyskill:hover{
@@ -235,6 +237,9 @@ h2 {
 .myskill>ul>li:hover {
     transform: scale(1.1);
     transition: all .2s;
+}
+.myskill>ul>li:hover span:last-child{
+    color: cadetblue;
 }
 
 .myskill>ul>li>span:last-child {
@@ -278,6 +283,8 @@ h2 {
     background-color: #fff;
     border: .1px solid rgb(238, 237, 237);
     border-radius: 20px;
+    padding-bottom: 30px;
+    height: 600px;
     margin-top: 30px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
@@ -302,17 +309,20 @@ h2 {
     /* padding: var(--padding-card, 2rem); */
     gap: .5rem;
 }
-
+.project-info p,.project-info a{
+    flex: 1;
+}
 .project-info .button_sourcecode {
     float: right;
     padding: 5px 10px;
-    border: 2px solid #000;
+    border: 2px solid rgb(127, 174, 177);
 
     /* border-radius: 10px; */
     width: 140px;
+    font-weight: 450;
     text-align: center;
     margin-left: 75%;
-    color: #000;
+    color: cadetblue;
     text-decoration: none;
 
 }
@@ -355,7 +365,10 @@ h2 {
     border-left: 5px solid rgba(95, 158, 160, .7);
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
-
+.project:hover img{
+    border-top-left-radius: 0;
+    border-top-right-radius: 10px;
+}
 /*********** contact me************/
 #contact_section {
     margin-top: 60px;
