--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -137,6 +137,7 @@ body {
 }
 
 
+
 .description-info {
     visibility: visible;
     animation-duration: 1s;
@@ -222,6 +223,7 @@ h2 {
     display: flex;
     margin-top: 50px;
     padding: 0;
+    padding: 0 50px;
     /* margin-left: 15%; */
 }
 
@@ -237,6 +239,8 @@ h2 {
 .myskill>ul>li:hover {
     transform: scale(1.1);
     transition: all .2s;
+    
+    
 }
 .myskill>ul>li:hover span:last-child{
     color: cadetblue;
@@ -287,7 +291,7 @@ h2 {
     height: 600px;
     margin-top: 30px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+    transition: all 0.2s cubic-bezier(.25, .8, .25, 1);
 }
 
 .project img {
@@ -361,7 +365,7 @@ h2 {
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     animation-name: example;
-    animation-duration: 0.25s;
+    animation-duration: 0.2s;
     border-left: 5px solid rgba(95, 158, 160, .7);
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
@@ -480,3 +484,15 @@ h2 {
     transform: scale(1.1);
     transition: all .5s;
 }
+/*****animation**********/
+.reveal{
+    position: relative;
+    transform: translateY(100px);
+    opacity: 0;
+    transition: 1s all ease;
+  }
+  
+  .reveal.active{
+    transform: translateY(0);
+    opacity: 1;
+  }
