--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -135,6 +135,24 @@ body {
         transform: none;
     }
 }
+@keyframes scale {
+    from {
+        -webkit-transform: scale(1);
+    }
+
+    to {
+        -webkit-transform: scale(1.1);
+    }
+}
+@keyframes scaleback {
+    from {
+        -webkit-transform: scale(1.1);
+    }
+
+    to {
+        -webkit-transform: scale(1);
+    }
+}
 
 
 
@@ -158,7 +176,8 @@ body {
     border-radius: 15px;
     margin-top: 30px;
 }
-.aboutme:hover{
+
+.aboutme:hover {
     background-color: rgb(47, 108, 110);
     color: #fff;
 }
@@ -170,6 +189,15 @@ body {
 .aboutme-content p {
     width: 90%;
     padding: 10px 0 40px 0;
+    display: block;
+    overflow: hidden;
+    /* white-space: nowrap; */
+    margin-top: -10px;
+    text-overflow: ellipsis;
+    font-size: 24px;
+    max-height: 5.0em;
+    line-height: 1.5em;
+
 }
 
 .aboutme-content h2 {
@@ -188,8 +216,14 @@ h2 {
     height: 65%;
     width: 85%;
     border-radius: 10px;
+    transform: scale(1);
+    /* animation-name: scaleback; */
+    transition: all .5s;
+    
 }
-
+.myimg>img:hover{
+    transform: scale(1.1);
+}
 .showmyskill {
     text-decoration: none;
     color: #000;
@@ -200,9 +234,12 @@ h2 {
     padding: 10px 20px;
     bottom: 20px;
     left: 10px;
+    margin-top: 30px;
+    width: 160px;
 
 }
-.showmyskill:hover{
+
+.showmyskill:hover {
     background-color: #000;
     color: #Fff;
 }
@@ -223,8 +260,8 @@ h2 {
     display: flex;
     margin-top: 50px;
     padding: 0;
-    padding: 0 50px;
-    /* margin-left: 15%; */
+    
+    
 }
 
 .myskill>ul>li {
@@ -239,10 +276,11 @@ h2 {
 .myskill>ul>li:hover {
     transform: scale(1.1);
     transition: all .2s;
-    
-    
+
+
 }
-.myskill>ul>li:hover span:last-child{
+
+.myskill>ul>li:hover span:last-child {
     color: cadetblue;
 }
 
@@ -284,17 +322,20 @@ h2 {
 }
 
 .project {
+    display: flex;
+    flex-direction: column;
     background-color: #fff;
     border: .1px solid rgb(238, 237, 237);
     border-radius: 20px;
-    padding-bottom: 30px;
-    height: 600px;
+    padding-bottom: 50px;
+    cursor: pointer;
     margin-top: 30px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     transition: all 0.2s cubic-bezier(.25, .8, .25, 1);
 }
 
 .project img {
+    flex: 1;
     width: 100%;
     height: auto;
     /* border-top: .1px solid #ccc; */
@@ -306,6 +347,8 @@ h2 {
 }
 
 .project-info {
+    flex: 1;
+    position: relative;
     padding: 40px 60px 30px 40px;
     display: flex;
     flex: 1 1 auto;
@@ -313,9 +356,16 @@ h2 {
     /* padding: var(--padding-card, 2rem); */
     gap: .5rem;
 }
-.project-info p,.project-info a{
+
+.project-info p,
+.project-info a {
     flex: 1;
+    display: block;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
+
 .project-info .button_sourcecode {
     float: right;
     padding: 5px 10px;
@@ -325,7 +375,9 @@ h2 {
     width: 140px;
     font-weight: 450;
     text-align: center;
-    margin-left: 75%;
+    position: absolute;
+    bottom: -10%;
+    right: 5%;
     color: cadetblue;
     text-decoration: none;
 
@@ -369,10 +421,12 @@ h2 {
     border-left: 5px solid rgba(95, 158, 160, .7);
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
-.project:hover img{
+
+.project:hover img {
     border-top-left-radius: 0;
     border-top-right-radius: 10px;
 }
+
 /*********** contact me************/
 #contact_section {
     margin-top: 60px;
@@ -392,10 +446,12 @@ h2 {
 .contact_ul>li>span:last-child>p:first-child {
     opacity: .7;
 }
-.contact_ul>li >span:first-child:hover{
+
+.contact_ul>li>span:first-child:hover {
     transform: scale(1.2);
     transition: all .5s;
 }
+
 .contact_ul svg {
     height: 46px;
     width: 46px;
@@ -432,9 +488,11 @@ h2 {
 #footer h5 {
     color: #fff;
 }
-#footer p{
+
+#footer p {
     color: rgb(122, 122, 122);
 }
+
 .input_email {
     background-color: #000;
     padding: 10px 10px;
@@ -471,28 +529,33 @@ h2 {
 .contact_socialmedia {
     margin-top: 70px;
 }
-.contact_socialmedia_ul{
+
+.contact_socialmedia_ul {
     padding: 0;
 }
-.contact_socialmedia_ul > li > a > svg{
+
+.contact_socialmedia_ul>li>a>svg {
     color: rgb(153, 153, 153);
 }
-.contact_socialmedia_ul > li{
+
+.contact_socialmedia_ul>li {
     margin-right: 20px;
 }
-.contact_socialmedia_ul > li:hover{
+
+.contact_socialmedia_ul>li:hover {
     transform: scale(1.1);
     transition: all .5s;
 }
+
 /*****animation**********/
-.reveal{
+.reveal {
     position: relative;
     transform: translateY(100px);
     opacity: 0;
     transition: 1s all ease;
-  }
-  
-  .reveal.active{
+}
+
+.reveal.active {
     transform: translateY(0);
     opacity: 1;
-  }
+}
