--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #fafafa;
+    background-color: #fff;
     font-size: 14px;
 }
 
@@ -135,6 +135,7 @@ body {
         transform: none;
     }
 }
+
 @keyframes scale {
     from {
         -webkit-transform: scale(1);
@@ -144,6 +145,7 @@ body {
         -webkit-transform: scale(1.1);
     }
 }
+
 @keyframes scaleback {
     from {
         -webkit-transform: scale(1.1);
@@ -191,12 +193,13 @@ body {
     padding: 10px 0 40px 0;
     display: block;
     overflow: hidden;
-    /* white-space: nowrap; */
+    
     margin-top: -10px;
     text-overflow: ellipsis;
-    font-size: 24px;
-    max-height: 5.0em;
+    font-size: 22px;
+
     line-height: 1.5em;
+    
 
 }
 
@@ -213,33 +216,38 @@ h2 {
 }
 
 .myimg>img {
-    height: 65%;
+    height: auto;
     width: 85%;
     border-radius: 10px;
     transform: scale(1);
     /* animation-name: scaleback; */
     transition: all .5s;
-    
+
 }
-.myimg>img:hover{
+
+.myimg>img:hover {
     transform: scale(1.1);
 }
-.showmyskill {
+
+.showmore {
     text-decoration: none;
+    font-style: italic;
     color: #000;
-    border: 2px solid #000;
+    border: 3px solid #000;
     font-size: 20px;
     font-weight: 500;
     letter-spacing: -0.9px;
-    padding: 10px 20px;
+    padding: 10px 0;
+    text-align: center;
     bottom: 20px;
     left: 10px;
+    cursor: pointer;
     margin-top: 30px;
-    width: 160px;
+    width: 30%;
 
 }
 
-.showmyskill:hover {
+.showmore:hover {
     background-color: #000;
     color: #Fff;
 }
@@ -260,8 +268,8 @@ h2 {
     display: flex;
     margin-top: 50px;
     padding: 0;
-    
-    
+
+
 }
 
 .myskill>ul>li {
@@ -270,13 +278,12 @@ h2 {
     display: flex;
     flex-direction: column;
     cursor: pointer;
-
+    transform: scale(1);
+    transition: all .2s;
 }
 
 .myskill>ul>li:hover {
     transform: scale(1.1);
-    transition: all .2s;
-
 
 }
 
@@ -324,10 +331,10 @@ h2 {
 .project {
     display: flex;
     flex-direction: column;
-    background-color: #fff;
+    background-color: rgb(253, 253, 253);
     border: .1px solid rgb(238, 237, 237);
     border-radius: 20px;
-    padding-bottom: 50px;
+    padding-bottom: 60px;
     cursor: pointer;
     margin-top: 30px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
@@ -338,11 +345,9 @@ h2 {
     flex: 1;
     width: 100%;
     height: auto;
-    /* border-top: .1px solid #ccc; */
+    
     border-radius: 20px;
-    /* border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px; */
-    /* border: .5px solid rgb(252, 252, 252); */
+    
 
 }
 
@@ -423,8 +428,8 @@ h2 {
 }
 
 .project:hover img {
-    border-top-left-radius: 0;
-    border-top-right-radius: 10px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 20px;
 }
 
 /*********** contact me************/
@@ -558,4 +563,27 @@ h2 {
 .reveal.active {
     transform: translateY(0);
     opacity: 1;
+}
+
+/********* togges show more **********/
+.hideContent {
+    overflow: hidden;
+    line-height: 1em;
+    max-height: 5em;
+    
+}
+
+.showContent {
+    line-height: 1em;
+    height: auto;
+}
+
+.showContent {
+    height: auto;
+}
+.aboutme-content_text{
+    -webkit-transition: all .5s;
+    -moz-transition: all .5s;
+    -o-transition: all .5s;
+    transition: all .5s;
 }
