--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -48,7 +48,10 @@ body {
 }
 
 .info_img {
-    padding: 20px;
+    padding: 20px 50px;
+    margin-left: 10%;
+    width: 60%;
+    height: auto;
     /* height: 300px; */
 }
 
@@ -63,7 +66,8 @@ body {
 
 .info_img img {
     width: 100%;
-    height: 250px
+    box-shadow: 1px 3px 10px 2px #e2dfdf;
+    height: auto;
 }
 
 #about_content {
@@ -218,6 +222,7 @@ h2 {
 .myimg>img {
     height: auto;
     width: 85%;
+    box-shadow: 1px 3px 10px 2px #e2dfdf;
     border-radius: 10px;
     transform: scale(1);
     /* animation-name: scaleback; */
@@ -226,7 +231,7 @@ h2 {
 }
 
 .myimg>img:hover {
-    transform: scale(1.1);
+    transform: scale(1.03);
 }
 
 .showmore {
