--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -200,7 +200,7 @@ body {
     
     margin-top: -10px;
     text-overflow: ellipsis;
-    font-size: 22px;
+    font-size: 20px;
 
     line-height: 1.5em;
     
@@ -483,11 +483,14 @@ h2 {
     border-right: 1px solid rgb(231, 230, 230);
     flex: 1;
     padding-left: 30px;
+    text-align: center;
     padding-right: 20px;
 
 
 }
-
+.contact_ul>li>span{
+    text-align: left;
+}
 #footer {
     background-color: #000;
     width: 100%;
