--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -340,9 +340,11 @@ h2 {
     border: .1px solid rgb(238, 237, 237);
     border-radius: 20px;
     padding-bottom: 60px;
+    width: 90%;
+    margin-left: 5%;
     cursor: pointer;
     margin-top: 30px;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    box-shadow: 0 5px 7px rgb(0 0 0 / 12%), 0 5px 7px rgb(0 0 0 / 24%);
     transition: all 0.2s cubic-bezier(.25, .8, .25, 1);
 }
 
@@ -350,8 +352,9 @@ h2 {
     flex: 1;
     width: 100%;
     height: auto;
-    
-    border-radius: 20px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    /* border-radius: 20px; */
     
 
 }
