--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -172,17 +172,17 @@
     }
     .info .myname{
         font-size: 40px;
-        color: rgb(26, 26, 26) !important;
+        color: #fff !important;
     }
     #logo > a{
-        color: rgb(26, 26, 26) !important;
+        color: #fff !important;
     }
     .description-info{
-        color: rgb(26, 26, 26) !important;
+        color: #fff !important;
     }
     
     .IconShowListNav > svg{
-        color: rgb(26, 26, 26) !important;
+        color: #fff !important;
 
     }
 
