--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -55,7 +55,13 @@
     #logo>a {
         margin-left: 0px;
     }
-
+    #header{
+        background-size: 100% 100%;
+        background-size: cover;
+        height: auto;
+background-attachment: unset;
+  max-width: 100%;
+    }
     /***** about me *************/
     .aboutme-content {
         margin-top: 20px;
