--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -3,7 +3,7 @@
     .hide-Tablet-Mobile {
         display: none;
     }
-    
+
 
 }
 
@@ -18,23 +18,27 @@
         padding-left: 20px;
         font-size: 16px;
     }
-    .footername{
+
+    .footername {
         font-size: 16px;
     }
-    .footer_form-email{
+
+    .footer_form-email {
         position: relative;
     }
-    .footer_btn-sendEmail{
+
+    .footer_btn-sendEmail {
         position: absolute;
         top: 0;
         right: -1px;
         padding: 10px 10px;
-        
+
     }
-    #footer{
+
+    #footer {
         font-size: 16px;
     }
-    
+
 }
 
 /*********** moible **********/
@@ -55,13 +59,15 @@
     #logo>a {
         margin-left: 0px;
     }
-    #header{
+
+    #header {
         background-size: 100% 100%;
         background-size: cover;
         height: auto;
-background-attachment: unset;
-  max-width: 100%;
+        background-attachment: unset;
+        max-width: 100%;
     }
+
     /***** about me *************/
     .aboutme-content {
         margin-top: 20px;
@@ -124,71 +130,87 @@ background-attachment: unset;
         margin-left: -15px;
         font-size: 18px;
     }
-    .btn_submit{
+
+    .btn_submit {
         margin-top: 10px !important;
-        
+
     }
 
     /********** footer ****/
-    .footername{
+    .footername {
         display: none;
     }
-    #footer{
+
+    #footer {
         padding-left: 5% !important;
     }
+
     .contact_socialmedia_ul {
         display: flex;
     }
-    .contact_socialmedia h5{
+
+    .contact_socialmedia h5 {
         margin-bottom: 10px;
         margin-top: 20px;
     }
-    .contact_socialmedia > p:last-child{
+
+    .contact_socialmedia>p:last-child {
         margin-top: -15px;
     }
-    .contact_socialmedia{
+
+    .contact_socialmedia {
         margin-top: 0px;
     }
-    .navbar_footer_ul{
+
+    .navbar_footer_ul {
         margin-top: 0;
     }
-    .navbar_footer{
+
+    .navbar_footer {
         display: none;
     }
-    .footername{
+
+    .footername {
         margin-top: 10px;
     }
-    .contact_socialmedia{
+
+    .contact_socialmedia {
         margin-left: 0;
     }
+
     /********** header *********/
     .custom-1 {
         border-bottom-left-radius: 0% 0%;
         border-bottom-right-radius: 0% 0%;
     }
-    #header{
+
+    #header {
         height: 100vh;
         background-position: center;
         width: auto;
         filter: brightness(95%);
-        
+
     }
-    .nav_mobile{
+
+    .nav_mobile {
         display: block;
     }
-    .info .myname{
+
+    .info .myname {
         font-size: 40px;
-        color: #292727 !important;
+        color: #fff !important;
     }
-    #logo > a{
-        color: #292727 !important;
+
+    #logo>a {
+        color: #fff !important;
     }
-    .description-info{
-        color: #292727 !important;
+
+    .description-info {
+        color: #fff !important;
     }
-    
-    .IconShowListNav > svg{
-        color: #292727 !important;
+
+    .IconShowListNav>svg {
+        color: #fff !important;
 
     }
 
