--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -198,19 +198,19 @@
 
     .info .myname {
         font-size: 40px;
-        color: #fff !important;
+        color: #292727 !important;
     }
 
     #logo>a {
-        color: #fff !important;
+        color: #292727 !important;
     }
 
     .description-info {
-        color: #fff !important;
+        color: #292727 !important;
     }
 
     .IconShowListNav>svg {
-        color: #fff !important;
+        color: #292727 !important;
 
     }
 
